--- a/index.html
+++ b/index.html
@@ -482,50 +482,71 @@
             </ul>
           </address>
         </div>
-        <div class="footer-social-links">
-          <p class="social-title">присоединяйтесь</p>
-          <ul class="team-social-list list">
-            <li class="team-social-list-el">
-              <a
-                href="https://www.instagram.com/?hl=ru"
-                class="social-link-footer"
-              >
-                <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+        <div class="footer-flex">
+          <div class="footer-social-links">
+            <p class="social-title">присоединяйтесь</p>
+            <ul class="team-social-list list">
+              <li class="team-social-list-el">
+                <a
+                  href="https://www.instagram.com/?hl=ru"
+                  class="social-link-footer"
+                >
+                  <svg class="social-icon-footer">
+                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-list-el">
+                <a
+                  href="https://www.twitter.com/?hl=ru"
+                  class="social-link-footer"
+                >
+                  <svg class="social-icon-footer">
+                    <use href="./images/symbol-defs.svg#icon-p"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-list-el">
+                <a
+                  href="https://www.facebook.com/?hl=ru"
+                  class="social-link-footer"
+                >
+                  <svg class="social-icon-footer">
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-list-el">
+                <a
+                  href="https://www.linkedin.com/?hl=ru"
+                  class="social-link-footer"
+                >
+                  <svg class="social-icon-footer">
+                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="email-holder">
+            <p class="title">Подпишитесь на рассылку</p>
+            <form>
+              <label for="email"></label>
+              <input
+                class="email-text"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="hero-btn footer-btn">
+                Подписаться
+                <svg class="icon-send" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="team-social-list-el">
-              <a
-                href="https://www.twitter.com/?hl=ru"
-                class="social-link-footer"
-              >
-                <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-p"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="team-social-list-el">
-              <a
-                href="https://www.facebook.com/?hl=ru"
-                class="social-link-footer"
-              >
-                <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="team-social-list-el">
-              <a
-                href="https://www.linkedin.com/?hl=ru"
-                class="social-link-footer"
-              >
-                <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -539,6 +560,50 @@
             ></use>
           </svg>
         </button>
+        <form class="contacts-form">
+          <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
+          <label for="user-name" class="form-label">Имя</label>
+          <span class="form-wrapper">
+            <input
+              class="form-input"
+              type="text"
+              name="user-name"
+              id="user-name"
+            />
+            <svg class="form-icon" width="18" height="18" <use
+              href="./images/symbol-defs.svg#person-black-18dp-1"></use>
+            </svg>
+          </span>
+          <label for="user-phone" class="form-label">Телефон</label>
+          <span class="form-wrapper">
+            <input
+              class="form-input"
+              type="tel"
+              name="user-phone"
+              id="user-phone"
+            />
+            <svg class="form-icon" width="18" height="18" <use
+              href="./images/symbol-defs.svg#phone-black-18dp-1"></use>
+            </svg>
+          </span>
+          <label for="user-mail" class="form-label">Почта</label>
+          <span class="form-wrapper">
+            <input
+              class="form-input"
+              type="mail"
+              name="user-mail"
+              id="user-mail"
+            />
+            <svg class="form-icon" width="18" height="18" <use
+              href="./images/symbol-defs.svg#email-black-18dp-1"></use>
+            </svg>
+          </span>
+          <label for="user-comment" class="form-label">Комментарий</label>
+          <textarea name="user-comment" id="user-comment" placeholder="Введите текст" class="form-comment"></textarea>
+          <input type="checkbox" name="user-policy" id="user-policy" class="checkbox-policy visually-hidden">
+          <label for="policy" class="policy-agree"></label>Соглашаюсь с рассылкой и принимаю<a class="policy-agree-link" href="">Условия договора</a></label>
+          <button type="submit" class="hero-btn send-btn">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
