--- a/index.html
+++ b/index.html
@@ -562,46 +562,85 @@
         </button>
         <form class="contacts-form">
           <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
-          <label for="user-name" class="form-label">Имя</label>
-          <span class="form-wrapper">
+
+          <label for="user-name" class="form-label"
+            >Имя
+            <span class="form-wrapper">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use
+                  href="./images/symbol-defs.svg#icon-person-black-18dp-1"
+                ></use>
+              </svg>
+            </span>
+          </label>
+          <label for="user-phone" class="form-label"
+            >Телефон
+            <span class="form-wrapper">
+              <input
+                class="form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use
+                  href="./images/symbol-defs.svg#icon-phone-black-18dp-1"
+                ></use>
+              </svg>
+            </span>
+          </label>
+          <label for="user-mail" class="form-label"
+            >Почта
+            <span class="form-wrapper">
+              <input
+                class="form-input"
+                type="mail"
+                name="user-mail"
+                id="user-mail"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use
+                  href="./images/symbol-defs.svg#icon-email-black-18dp-1"
+                ></use>
+              </svg>
+            </span>
+          </label>
+          <label for="user-comment" class="form-label-comment"
+            >Комментарий
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Введите текст"
+              class="form-comment"
+            ></textarea>
+          </label>
+
+          <label class="form-checkbox">
             <input
-              class="form-input"
-              type="text"
-              name="user-name"
-              id="user-name"
+              type="checkbox"
+              name="user-policy"
+              id="user-policy"
+              class="checkbox-policy visually-hidden"
+              required
             />
-            <svg class="form-icon" width="18" height="18" <use
-              href="./images/symbol-defs.svg#person-black-18dp-1"></use>
-            </svg>
-          </span>
-          <label for="user-phone" class="form-label">Телефон</label>
-          <span class="form-wrapper">
-            <input
-              class="form-input"
-              type="tel"
-              name="user-phone"
-              id="user-phone"
-            />
-            <svg class="form-icon" width="18" height="18" <use
-              href="./images/symbol-defs.svg#phone-black-18dp-1"></use>
-            </svg>
-          </span>
-          <label for="user-mail" class="form-label">Почта</label>
-          <span class="form-wrapper">
-            <input
-              class="form-input"
-              type="mail"
-              name="user-mail"
-              id="user-mail"
-            />
-            <svg class="form-icon" width="18" height="18" <use
-              href="./images/symbol-defs.svg#email-black-18dp-1"></use>
-            </svg>
-          </span>
-          <label for="user-comment" class="form-label">Комментарий</label>
-          <textarea name="user-comment" id="user-comment" placeholder="Введите текст" class="form-comment"></textarea>
-          <input type="checkbox" name="user-policy" id="user-policy" class="checkbox-policy visually-hidden">
-          <label for="policy" class="policy-agree"></label>Соглашаюсь с рассылкой и принимаю<a class="policy-agree-link" href="">Условия договора</a></label>
+            <span class="checkbox-icon">
+              <svg class="icon-check" width="16" height="15">
+                <use href="./images/symbol-defs.svg#icon-Vector-3"></use></svg
+            ></span>
+            <span class="policy-agree"
+              >Соглашаюсь с рассылкой и принимаю<a
+                class="policy-agree-link"
+                href="/"
+                >Условия договора</a
+              ></span
+            >
+          </label>
           <button type="submit" class="hero-btn send-btn">Отправить</button>
         </form>
       </div>
