--- a/portfolio.html
+++ b/portfolio.html
@@ -330,6 +330,25 @@
             </li>
           </ul>
         </div>
+        <div class="email-holder">
+          <p class="title">Подпишитесь на рассылку</p>
+          <form>
+            <label for="email"></label>
+            <input
+              class="email-text"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="hero-btn footer-btn">
+              Подписаться
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
