--- a/index.html
+++ b/index.html
@@ -622,17 +622,19 @@
           </label>
 
           <label class="form-checkbox">
-            <input
-              type="checkbox"
-              name="user-policy"
-              id="user-policy"
-              class="checkbox-policy visually-hidden"
-              required
-            />
             <span class="checkbox-icon">
+              <input
+                type="checkbox"
+                name="user-policy"
+                id="user-policy"
+                class="checkbox-policy visually-hidden"
+                required
+              />
+
               <svg class="icon-check" width="16" height="15">
-                <use href="./images/symbol-defs.svg#icon-Vector-3"></use></svg
-            ></span>
+                <use href="./images/symbol-defs.svg#icon-Vector-3"></use>
+              </svg>
+            </span>
             <span class="policy-agree"
               >Соглашаюсь с рассылкой и принимаю<a
                 class="policy-agree-link"
@@ -641,7 +643,7 @@
               ></span
             >
           </label>
-          <button type="submit" class="hero-btn send-btn">Отправить</button>
+          <button type="submit" class="send-btn">Отправить</button>
         </form>
       </div>
     </div>
