--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contacts-link">
               <svg class="icon-contacts" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -46,7 +46,7 @@
           <li class="item">
             <a href="tel:+380961111111" class="contacts-link">
               <svg class="icon-contacts-tel" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -72,7 +72,7 @@
             <li class="features-el">
               <div class="features-icon-box">
                 <svg class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
@@ -84,7 +84,7 @@
             <li class="features-el">
               <div class="features-icon-box">
                 <svg class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="title">Пунктуальность</h3>
@@ -96,7 +96,7 @@
             <li class="features-el">
               <div class="features-icon-box">
                 <svg class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="title">Планирование</h3>
@@ -108,7 +108,7 @@
             <li class="features-el">
               <div class="features-icon-box">
                 <svg class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
@@ -179,9 +179,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -191,7 +189,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-p"></use>
+                        <use href="./images/icons.svg#icon-p"></use>
                       </svg>
                     </a>
                   </li>
@@ -201,9 +199,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -213,9 +209,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -240,9 +234,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -252,7 +244,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-p"></use>
+                        <use href="./images/icons.svg#icon-p"></use>
                       </svg>
                     </a>
                   </li>
@@ -262,9 +254,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,9 +264,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -300,9 +288,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -312,7 +298,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-p"></use>
+                        <use href="./images/icons.svg#icon-p"></use>
                       </svg>
                     </a>
                   </li>
@@ -322,9 +308,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -334,9 +318,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -360,9 +342,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -372,7 +352,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-p"></use>
+                        <use href="./images/icons.svg#icon-p"></use>
                       </svg>
                     </a>
                   </li>
@@ -382,9 +362,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -394,9 +372,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -413,42 +389,42 @@
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo"></use>
+                  <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-9"></use>
+                  <use href="./images/icons.svg#icon-Logo-9"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-el">
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-10"></use>
+                  <use href="./images/icons.svg#icon-Logo-10"></use>
                 </svg>
               </a>
             </li>
@@ -492,7 +468,7 @@
                   class="social-link-footer"
                 >
                   <svg class="social-icon-footer">
-                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
@@ -502,7 +478,7 @@
                   class="social-link-footer"
                 >
                   <svg class="social-icon-footer">
-                    <use href="./images/symbol-defs.svg#icon-p"></use>
+                    <use href="./images/icons.svg#icon-p"></use>
                   </svg>
                 </a>
               </li>
@@ -512,7 +488,7 @@
                   class="social-link-footer"
                 >
                   <svg class="social-icon-footer">
-                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
@@ -522,7 +498,7 @@
                   class="social-link-footer"
                 >
                   <svg class="social-icon-footer">
-                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
@@ -542,7 +518,7 @@
               <button type="submit" class="hero-btn footer-btn">
                 Подписаться
                 <svg class="icon-send" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                  <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
             </form>
@@ -555,9 +531,7 @@
       <div class="modal-window">
         <button class="close-button" type="button" data-modal-close>
           <svg width="18" height="18">
-            <use
-              href="./images/symbol-defs.svg#icon-close-black-18dp-2-1-1"
-            ></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
           </svg>
         </button>
         <form class="contacts-form">
@@ -573,9 +547,7 @@
                 id="user-name"
               />
               <svg class="form-icon" width="18" height="18">
-                <use
-                  href="./images/symbol-defs.svg#icon-person-black-18dp-1"
-                ></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </span>
           </label>
@@ -589,9 +561,7 @@
                 id="user-phone"
               />
               <svg class="form-icon" width="18" height="18">
-                <use
-                  href="./images/symbol-defs.svg#icon-phone-black-18dp-1"
-                ></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </span>
           </label>
@@ -605,9 +575,7 @@
                 id="user-mail"
               />
               <svg class="form-icon" width="18" height="18">
-                <use
-                  href="./images/symbol-defs.svg#icon-email-black-18dp-1"
-                ></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </span>
           </label>
@@ -632,7 +600,7 @@
               />
 
               <svg class="icon-check" width="16" height="15">
-                <use href="./images/symbol-defs.svg#icon-Vector-3"></use>
+                <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
             </span>
             <span class="policy-agree"
