--- a/portfolio.html
+++ b/portfolio.html
@@ -34,14 +34,14 @@
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contacts-link"
               ><svg class="icon-contacts" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="contacts-link"
               ><svg class="icon-contacts-tel" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -294,7 +294,7 @@
                 class="social-link-footer"
               >
                 <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
@@ -304,7 +304,7 @@
                 class="social-link-footer"
               >
                 <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-p"></use>
+                  <use href="./images/icons.svg#icon-p"></use>
                 </svg>
               </a>
             </li>
@@ -314,7 +314,7 @@
                 class="social-link-footer"
               >
                 <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
@@ -324,7 +324,7 @@
                 class="social-link-footer"
               >
                 <svg class="social-icon-footer">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
@@ -344,7 +344,7 @@
             <button type="submit" class="hero-btn footer-btn">
               Подписаться
               <svg class="icon-send" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
