--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <span class="form-wrapper">
               <input
                 class="form-input"
-                type="mail"
+                type="email"
                 name="user-mail"
                 id="user-mail"
               />
